# ws6pi

./: README.md
devel/: .catkin  .rosinstall
devel/lib/pkgconfig/: navigation.pc  rosserial_arduino.pc  rosserial_chibios.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  ws1botctrl.pc
devel/lib/rosserial_arduino/: make_libraries.py  serial_node.py
devel/lib/rosserial_client/: make_library.py
devel/lib/rosserial_embeddedlinux/: make_libraries.py
devel/lib/rosserial_mbed/: make_libraries.py
devel/lib/rosserial_python/: message_info_service.py  serial_node.py
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
devel/lib/rosserial_windows/: make_libraries.py
devel/share/navigation/cmake/: navigationConfig.cmake
devel/share/rosserial_arduino/cmake/: rosserial_arduino-extras.cmake  rosserial_arduino-msg-extras.cmake  (+2 more)
devel/share/rosserial_chibios/: make_libraries.py
devel/share/rosserial_vex_cortex/: make_libraries.py
devel/share/rosserial_vex_v5/: make_libraries.py
src/navigation/launch/: amcl.launch  navigation.launch
src/navigation/maps/: ducws.yaml
src/ws1botctrl/: CMakeLists.txt  package.xml
src/ws1botctrl/launch/: cmdtoArduino_launch.launch  cmdtoArduino_launch1.launch  combined.launch  linh.launch  linh.launch.save  pcIP.sh  pcrun.launch  pcrun.sh  rasprun.sh
src/ws1botctrl/scripts/: cmdtoArduino.py  combined_serial_node.py
(+26 files in other folders)
