<?xml version="1.0"?>
<package format="2">
  <name>ws1botctrl</name>
  <version>0.0.0</version>
  <description>The ws1botctrl package</description>
  <maintainer email="thienductang@gmail.com">duc</maintainer>
  <license>TODO</license>
  <author email="thienductang@gmail.com">Jane Doe</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
   <!--<build_depend>geometry_msgs</build_depend> -->
  <build_depend>turtlesim</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <!--<build_export_depend>geometry_msgs</build_export_depend> -->
  <build_export_depend>turtlesim</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <!--<exec_depend>geometry_msgs</exec_depend> -->

  <export>
  </export>
</package>

